[package]
name = "discord_reaction_info_selenity"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
regex = "1.11.1"
log = { version = "0.4.27" }
logcall = { version = "0.1.11"}
poise = "0.6.1"

[dev-dependencies]
